--- a/public/koszyk.html
+++ b/public/koszyk.html
@@ -69,96 +69,6 @@
   </section>
 </main>
 <footer id="footer-placeholder"></footer>
-<script>
-  const ICONS = {
-    'box': 'fa-box',
-    'pallet': 'fa-pallet'
-  };
-
-  function getIcon(productId) {
-    if (productId.startsWith('1-')) return ICONS['box'];
-    if (productId.startsWith('2-')) return ICONS['pallet'];
-    return 'fa-box';
-  }
-
-  let cart = [];
-  function loadCart() {
-    const saved = localStorage.getItem('cart');
-    cart = saved ? JSON.parse(saved) : [];
-  }
-
-  function saveCart() {
-    localStorage.setItem('cart', JSON.stringify(cart));
-    localStorage.setItem('cartCount', cart.reduce((t, item) => t + item.quantity, 0));
-  }
-
-  function renderCart() {
-    const container = document.getElementById('cart-items');
-    const totalField = document.getElementById('cart-total');
-    container.innerHTML = '';
-    let total = 0;
-
-    if (cart.length === 0) {
-      container.innerHTML = '<p>Twój koszyk jest pusty.</p>';
-      document.querySelector('.cart-summary').style.display = 'none';
-      return;
-    }
-
-    cart.forEach((item, index) => {
-      const iconClass = getIcon(item.id);
-      const div = document.createElement('div');
-      div.className = 'cart-item';
-      div.innerHTML = `
-        <i class="fas ${iconClass}"></i>
-        <div class="item-desc">${item.name}</div>
-        <input type="number" class="quantity-input" min="1" value="${item.quantity}" data-index="${index}">
-        <div><strong>${(item.price * item.quantity).toFixed(2)} zł</strong></div>
-        <button class="remove-btn" data-index="${index}"><i class="fas fa-trash"></i></button>
-      `;
-      container.appendChild(div);
-      total += item.price * item.quantity;
-    });
-
-    totalField.textContent = `${total.toFixed(2)} zł`;
-    addEventListeners();
-  }
-
-  function addEventListeners() {
-    document.querySelectorAll('.quantity-input').forEach(input => {
-      input.addEventListener('change', e => {
-        const index = e.target.getAttribute('data-index');
-        const qty = parseInt(e.target.value);
-        if (qty > 0) {
-          cart[index].quantity = qty;
-        } else {
-          cart.splice(index, 1);
-        }
-        saveCart();
-        renderCart();
-      });
-    });
-
-    document.querySelectorAll('.remove-btn').forEach(btn => {
-      btn.addEventListener('click', e => {
-        const index = e.currentTarget.getAttribute('data-index');
-        cart.splice(index, 1);
-        saveCart();
-        renderCart();
-      });
-    });
-  }
-
-  document.addEventListener('DOMContentLoaded', () => {
-    loadCart();
-    renderCart();
-
-    fetch('header.html').then(r => r.text()).then(d => document.getElementById('header-placeholder').innerHTML = d);
-    fetch('footer.html').then(r => r.text()).then(d => document.getElementById('footer-placeholder').innerHTML = d);
-
-    document.getElementById('checkout-button').addEventListener('click', () => {
-      window.location.href = 'zamowienie.html';
-    });
-  });
-</script>
+<script src="script.js"></script>
 </body>
 </html>
