--- a/public/index.html
+++ b/public/index.html
@@ -6,126 +6,6 @@
     <title>BulkReturns - Hurtowe zakupy zwrotów konsumenckich</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
-    <style>
-        /* Page-specific styles */
-        .hero {
-            background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://images.unsplash.com/photo-1595341888016-a392ef81b7de?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1200&q=80') center/cover no-repeat;
-            height: 500px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            color: white;
-            padding: 0 20px;
-            margin-bottom: 50px;
-            border-radius: 10px;
-        }
-
-        .hero-content {
-            max-width: 800px;
-        }
-
-        .hero h2 {
-            font-size: 3rem;
-            margin-bottom: 20px;
-            text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
-        }
-
-        .hero p {
-            font-size: 1.2rem;
-            margin-bottom: 30px;
-            text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
-        }
-
-        .testimonials {
-            background-color: var(--primary);
-            padding: 60px 20px;
-            color: white;
-            text-align: center;
-            margin: 50px 0;
-            border-radius: 10px;
-        }
-
-        .testimonial-container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        .testimonial {
-            background: rgba(255, 255, 255, 0.1);
-            padding: 30px;
-            border-radius: 8px;
-            margin-bottom: 20px;
-        }
-
-        .testimonial p {
-            font-style: italic;
-            margin-bottom: 15px;
-        }
-
-        .testimonial-author {
-            font-weight: bold;
-        }
-
-        .features {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            gap: 30px;
-            max-width: 1200px;
-            margin: 50px auto;
-            padding: 0 20px;
-        }
-
-        .feature {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            width: 250px;
-        }
-
-        .feature-icon {
-            width: 70px;
-            height: 70px;
-            background-color: var(--primary);
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-bottom: 20px;
-            color: white;
-            font-size: 1.8rem;
-        }
-
-        .newsletter {
-            background-color: var(--light);
-            padding: 60px 20px;
-            text-align: center;
-            margin: 50px 0;
-            border-radius: 10px;
-        }
-
-        .newsletter-content {
-            max-width: 600px;
-            margin: 0 auto;
-        }
-
-        .newsletter-form {
-            display: flex;
-            gap: 10px;
-            margin-top: 20px;
-        }
-
-        .newsletter-form input {
-            flex: 1;
-            padding: 12px 15px;
-            border: 1px solid var(--light-gray);
-            border-radius: 4px;
-            font-size: 1rem;
-        }
-    </style>
 </head>
 <body>
     <!-- Toast Notification -->
@@ -156,7 +36,7 @@
                 <h2 class="section-title">Nasze kategorie</h2>
                 <div class="products-container">
                     <div class="product-card" data-base-id="1" data-base-name="Karton mix ABC">
-                        <div class="product-badge">TOP SPRZEDAŻ</div>
+                        <div class="product-badge">TOP SPRZEDAź</div>
                         <div class="product-img">
                             <i class="fas fa-box fa-3x"></i>
                         </div>
@@ -209,7 +89,7 @@
                         <div class="testimonial-author">- Jan K., odsprzedawca</div>
                     </div>
                     <div class="testimonial">
-                        <p>"Kartony odzieży to świetny sposób na uzupełnienie asortymentu w moim sklepie internetowym. Jakość często lepsza niż oczekiwałem."</p>
+                        <p>"Kartony odzieży to ietny sposób na uzupełnienie asortymentu w moim sklepie internetowym. Jakość często lepsza niż oczekiwałem."</p>
                         <div class="testimonial-author">- Anna M., właścicielka sklepu</div>
                     </div>
                 </div>
@@ -268,6 +148,5 @@
     <footer id="footer-placeholder"></footer>
 
     <script src="script.js"></script>
-
 </body>
 </html>
