--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <!-- Header placeholder -->
-    <header id="header-placeholder"></header>
+    <header id="header.html"></header>
 
     <!-- Main Content -->
     <main class="page-container" id="main-content">
