--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <!-- Header placeholder -->
-    <header id="header.html"></header>
+    <div id="header-placeholder"></div>
 
     <!-- Main Content -->
     <main class="page-container" id="main-content">
