--- a/public/header.html
+++ b/public/header.html
@@ -2,8 +2,8 @@
   <nav class="navbar">
     <div class="navbar-container">
       <a href="index.html" class="logo" id="main-logo">
-        <i class="fas fa-box-open fa-2x"></i>
-        <h1>BulkReturns</h1>
+        <i class="fas fa-box-open fa-2x" style="color: var(--dark-green);"></i>
+        <h1 style="color: var(--dark-green);">BulkReturns</h1>
       </a>
 
       <button class="menu-toggle" aria-label="Toggle menu">
@@ -24,9 +24,6 @@
           <a href="koszyk.html" class="nav-icon cart-icon">
             <i class="fas fa-shopping-cart"></i>
             <span class="cart-count">0</span>
-          </a>
-          <a href="#" class="nav-icon">
-            <i class="fas fa-user"></i>
           </a>
         </div>
       </div>
