--- a/public/faq.html
+++ b/public/faq.html
@@ -24,7 +24,7 @@
 
         .faq-question {
             padding: 20px;
-            background-color: var(--primary);
+            background-color: var(--primary-color);
             color: white;
             font-weight: 600;
             font-size: 1.1rem;
