--- a/public/kontakt.html
+++ b/public/kontakt.html
@@ -43,7 +43,7 @@
         .contact-icon {
             width: 40px;
             height: 40px;
-            background: var(--primary);
+            background: var(--primary-color);
             border-radius: 50%;
             display: flex;
             align-items: center;
@@ -87,7 +87,7 @@
         }
         
         .submit-btn {
-            background: var(--primary);
+            background: var(--primary-color);
             color: white;
             border: none;
             padding: 12px 30px;
@@ -120,7 +120,7 @@
         
         .map-placeholder i {
             font-size: 3rem;
-            color: var(--primary);
+            color: var(--primary-color);
             margin-bottom: 15px;
         }
     </style>
