--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>BulkReturns - Hurtowe zakupy zwrotów konsumenckich</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <!-- Toast Notification -->
@@ -28,7 +27,7 @@
                     <h2>Hurtowe zakupy zwrotów konsumenckich</h2>
                     <p>Odkryj niesamowite okazje w naszych kartonach ABC! Mix zwróconych produktów po atrakcyjnych cenach.</p>
                     <a href="produkty.html" class="btn btn-primary">Zobacz oferty</a>
-                    <a href="faq.html" class="btn btn-outline">Jak to działa?</a>
+                    <a href="faq.html" class="btn btn-outline hero-btn-outline">Jak to działa?</a>
                 </div>
             </section>
 
@@ -37,7 +36,7 @@
                 <h2 class="section-title">Nasze kategorie</h2>
                 <div class="products-container">
                     <div class="product-card" data-base-id="1" data-base-name="Karton mix ABC">
-                        <div class="product-badge">TOP SPRZEDAź</div>
+                        <div class="product-badge">TOP SPRZEDAŻ</div>
                         <div class="product-img">
                             <i class="fas fa-box fa-3x"></i>
                         </div>
@@ -90,7 +89,7 @@
                         <div class="testimonial-author">- Jan K., odsprzedawca</div>
                     </div>
                     <div class="testimonial">
-                        <p>"Kartony odzieży to ietny sposób na uzupełnienie asortymentu w moim sklepie internetowym. Jakość często lepsza niż oczekiwałem."</p>
+                        <p>"Kartony odzieży to świetny sposób na uzupełnienie asortymentu w moim sklepie internetowym. Jakość często lepsza niż oczekiwałem."</p>
                         <div class="testimonial-author">- Anna M., właścicielka sklepu</div>
                     </div>
                 </div>
@@ -137,7 +136,7 @@
                     <h2>Zapisz się do newslettera</h2>
                     <p>Otrzymuj informacje o nowych dostawach i specjalne oferty</p>
                     <form class="newsletter-form">
-                        <input type="email" placeholder="Wpisz swój adres email" required>
+                        <input type="email" placeholder="Wpisz swój adres email" required />
                         <button type="submit" class="btn btn-primary">Zapisz się</button>
                     </form>
                 </div>
